--- a/buckchat/app/views/helloworld.pug
+++ b/buckchat/app/views/helloworld.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
     head
-        title Blueprint.js - Hello, World!
+        title Buckchat - Broadcast messaging service!
 
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css")
@@ -9,22 +9,25 @@ html(lang="en")
 
     body
         div.container
-            h1 Blueprint.js
+            h1 Buckchat - Chat away!
 
             p
-                | This example illustrates how a simple web application in Blueprint.js that
-                | use both <strong>GET</strong> and <strong>PUT</strong> verbs with either a
-                | controller or view.
+                | This is a prototype login page of our web application. The page is still under construction!
+                | It will be up and running soon!
 
             form.form-horizontal(method='post', action='/helloworld')
                 div.form-group
-                    label.col-sm-2.control-label(for="name") Name
-                    div.col-sm-10
-                        input#name.form-control(type="text", name="name", placeholder="Type name here")
+                    label.col-sm-2.control-label(for="name") Username
+                    div.col-sm-5
+                        input#name.form-control(type="text", name="name", placeholder="Type username here")
+                div.form-group
+                    label.col-sm-2.control-label(for="pass") Password
+                    div.col-sm-5
+                        input#pass.form-control(type="text", name="pass", placeholder="Type password here")
 
                 div.form-group
-                    div.col-sm-offset-2.col-sm-10
-                        button.btn.btn-default(type="submit") Submit
+                    div.col-sm-offset-2.col-sm-5
+                        button.btn.btn-default(type="submit") Login
 
             - if (name)
                 p The POST method uses a controller to handle the action.
