Fixed password field in view

--- a/buckchat/app/views/intro.pug
+++ b/buckchat/app/views/intro.pug
@@ -21,9 +21,9 @@ html(lang="en")
                     div.col-sm-5
                         input#name.form-control(type="text", name="name", placeholder="Type username here")
                 div.form-group
-                    label.col-sm-2.control-label(for="pass") Password
+                    label.col-sm-2.control-label(for="password") Password
                     div.col-sm-5
-                        input#pass.form-control(type="text", name="pass", placeholder="Type password here")
+                        input#pass.forwordm-control(type="password", name="password", placeholder="Type password here")
 
                 div.form-group
                     div.col-sm-offset-2.col-sm-5
