Initial passport commit

--- a/buckchat/app/views/intro.pug
+++ b/buckchat/app/views/intro.pug
@@ -15,7 +15,7 @@ html(lang="en")
                 | This is a prototype login page of our web application. The page is still under construction!
                 | It will be up and running soon!
 
-            form.form-horizontal(method='post', action='/intro')
+            form.form-horizontal(method='post', action='/login')
                 div.form-group
                     label.col-sm-2.control-label(for="name") Username
                     div.col-sm-5
