Fixed username naming bug in view

--- a/buckchat/app/views/intro.pug
+++ b/buckchat/app/views/intro.pug
@@ -17,9 +17,9 @@ html(lang="en")
 
             form.form-horizontal(method='post', action='/login')
                 div.form-group
-                    label.col-sm-2.control-label(for="name") Username
+                    label.col-sm-2.control-label(for="username") Username
                     div.col-sm-5
-                        input#name.form-control(type="text", name="name", placeholder="Type username here")
+                        input#username.form-control(type="text", name="username", placeholder="Type username here")
                 div.form-group
                     label.col-sm-2.control-label(for="password") Password
                     div.col-sm-5
