Added feature to show name of user in welcome page

--- a/buckchat/app/views/welcome.pug
+++ b/buckchat/app/views/welcome.pug
@@ -12,5 +12,4 @@ html(lang="en")
             h1 Welcome!
 
             p
-                | This is a prototype home page of our web application. The page is still under construction!
-                | It will be up and running soon!
+                | Thank you for visiting Buckchat, #{name}.
