Revised intro.pug

--- a/buckchat/app/views/intro.pug
+++ b/buckchat/app/views/intro.pug
@@ -51,7 +51,7 @@ html(lang="en")
 		div.form-group
                     label.col-sm-2.control-label(for="register-password") Password
                     div.col-sm-5
-                        input#register-pass.forwordm-control(type="password", name="password", placeholder="Type password here")
+                        input#register-password.forwordm-control(type="password", name="password", placeholder="Type password here")
 
                 div.form-group
                     div.col-sm-offset-2.col-sm-5
