--- a/buckchat/app/views/intro.pug
+++ b/buckchat/app/views/intro.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
     head
-        title Buckchat - Broadcast messaging service!
+        title Buckchat Messaging Service
 
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css")
@@ -11,23 +11,26 @@ html(lang="en")
         div.container
             h1 Buckchat - Chat away!
 
-            p
-                | This is a prototype login page of our web application. The page is still under construction!
-                | It will be up and running soon!
+            p Please login or register with the Buckchat Messaging Service.
 
             form.form-horizontal(method='post', action='/login')
-                div.form-group
-                    label.col-sm-2.control-label(for="login-username") Username
-                    div.col-sm-5
-                        input#login-username.form-control(type="text", name="username", placeholder="Type username here")
-                div.form-group
-                    label.col-sm-2.control-label(for="login-password") Password
-                    div.col-sm-5
-                        input#login-password.forwordm-control(type="password", name="password", placeholder="Type password here")
+                fieldset
 
-                div.form-group
-                    div.col-sm-offset-2.col-sm-5
-                        button.btn.btn-default(type="submit") Login
+                    legend Login
+
+                    div.form-group
+                        label.col-sm-2.control-label(for="login-username") Username
+                        div.col-sm-5
+                            input#login-username.form-control(type="text", name="username", placeholder="Type username here")
+
+                    div.form-group
+                        label.col-sm-2.control-label(for="login-password") Password
+                        div.col-sm-5
+                            input#login-password.forwordm-control(type="password", name="password", placeholder="Type password here")
+
+                    div.form-group
+                        div.col-sm-offset-2.col-sm-5
+                            button.btn.btn-default(type="submit") Login
 
             - if (error)
                 p Are you kidding me??
@@ -36,26 +39,32 @@ html(lang="en")
 
          
             form.form-horizontal(method='post', action='/register')
-                div.form-group
-                    label.col-sm-2.control-label(for="register-name") Name
-                    div.col-sm-5
-                        input#register-name.form-control(type="text", name="name", placeholder="Type full name here")
-                div.form-group
-                    label.col-sm-2.control-label(for="register-email") Email
-                    div.col-sm-5
-                        input#register-email.forwordm-control(type="email", name="email", placeholder="Type email here")
-            div.form-group
-                    label.col-sm-2.control-label(for="register-username") Username
-                    div.col-sm-5
-                        input#register-username.forwordm-control(type="text", name="username", placeholder="Type username here")
-            div.form-group
-                    label.col-sm-2.control-label(for="register-password") Password
-                    div.col-sm-5
-                        input#register-password.forwordm-control(type="password", name="password", placeholder="Type password here")
+                fieldset
 
-                div.form-group
-                    div.col-sm-offset-2.col-sm-5
-                        button.btn.btn-default(type="submit") Register
+                    legend Register
+
+                    div.form-group
+                        label.col-sm-2.control-label(for="register-name") Name
+                        div.col-sm-5
+                            input#register-name.form-control(type="text", name="name", placeholder="Type full name here")
+
+                    div.form-group
+                        label.col-sm-2.control-label(for="register-email") Email
+                        div.col-sm-5
+                            input#register-email.forwordm-control(type="email", name="email", placeholder="Type email here")
+
+                    div.form-group
+                            label.col-sm-2.control-label(for="register-username") Username
+                            div.col-sm-5
+                                input#register-username.forwordm-control(type="text", name="username", placeholder="Type username here")
+                    div.form-group
+                            label.col-sm-2.control-label(for="register-password") Password
+                            div.col-sm-5
+                                input#register-password.forwordm-control(type="password", name="password", placeholder="Type password here")
+
+                    div.form-group
+                        div.col-sm-offset-2.col-sm-5
+                            button.btn.btn-default(type="submit") Register
 
             - if (error)
                 p One or more fields are invalid!
