--- a/buckchat/app/views/intro.pug
+++ b/buckchat/app/views/intro.pug
@@ -66,7 +66,7 @@ html(lang="en")
                         div.col-sm-offset-2.col-sm-5
                             button.btn.btn-default(type="submit") Register
 
-            - if (error)
+            - if (registerError)
                 p One or more fields are invalid!
 
-                blockquote #{error}!
+                blockquote #{registerError}!
