Modified home page title bar

--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
     head
-        title Home Page
+        title Buckchat Home Page
 
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css")
