--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -25,12 +25,11 @@ html(lang="en")
 
 
                     div.form-group
-                        label.col-sm-2.control-label(for="drip-creation-text") Drip text
-                        div.col-sm-5
-                            textarea#drip-creation-text.forwordm-control(name="text", placeholder="Type drip text here", rows="4" cols="50")
+                        div.col-sm-6
+                            textarea.forwordm-control(name="text", placeholder="Type drip text here", rows="4" cols="50")
 
                     div.form-group
-                        div.col-sm-offset-2.col-sm-5
+                        div.col-sm-6
                             button.btn.btn-default(type="submit") Drip
 
 
