Added drip creation success msg in view

--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -20,6 +20,10 @@ html(lang="en")
 
                     legend Create a Drip
 
+                    if (createDripSuccess)
+                        p.alert.alert-success #{createDripSuccess}
+
+
                     if (createDripError)
                         p.alert.alert-danger Error: #{createDripError}
 
