Data requirements/Test cases/Minor Client side validation covered

--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -30,7 +30,7 @@ html(lang="en")
 
                     div.form-group
                         div.col-sm-6
-                            textarea.forwordm-control(name="text", placeholder="Type drip text here", rows="4" cols="50")
+                            textarea.forwordm-control(name="text", placeholder="Type drip text here", rows="4" cols="50", required, maxlength=160)
 
                     div.form-group
                         div.col-sm-6
