Added code: controller does not return bucket names

--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -36,4 +36,5 @@ html(lang="en")
                         div.col-sm-6
                             button.btn.btn-default(type="submit") Drip
 
+            p Bucket Names = #{userBuckets}
 
