--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -15,6 +15,7 @@ html(lang="en")
                 | Thank you for visiting Buckchat, #{name}.
 
 
+
             form.form-horizontal(method='post', action='/buckchat/create-drip')
                 fieldset
 
@@ -30,11 +31,22 @@ html(lang="en")
 
                     div.form-group
                         div.col-sm-6
-                            textarea.forwordm-control(name="text", placeholder="Type drip text here", rows="4" cols="50", required, maxlength=160)
+                            textarea.forwordm-control(name="text", placeholder="Type drip text here", rows="4" cols="50")
 
                     div.form-group
                         div.col-sm-6
                             button.btn.btn-default(type="submit") Drip
 
-            p Bucket Names = #{userBuckets}
+            
+            form.form-horizontal(method='post', action='/buckchat/bucketList')
+                   div.form-group
+                       div.col-sm-6
+                           button.btn.btn-primary(type="submit") Click to view buckets
 
+            if(userBuckets)
+                form.form-horizontal(method='post', action='/buckchat/showDrip')
+                    legend Click on bucket name to view drips
+                    each individualBucket in userBuckets
+                        div.form-group
+                            div.col-sm-6
+                                button.btn.btn-info(type="submit", name="individualBucketButton", value=individualBucket) #{individualBucket}
