--- a/buckchat/app/views/bucket.pug
+++ b/buckchat/app/views/bucket.pug
@@ -5,6 +5,7 @@ html(lang="en")
 
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css")
+        script(src="http://code.jquery.com/jquery-3.1.1.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
 
     body
