--- a/buckchat/app/views/intro.pug
+++ b/buckchat/app/views/intro.pug
@@ -13,7 +13,7 @@ html(lang="en")
 
             p Please login or register with the Buckchat Messaging Service.
 
-            // Allowing the user to login with valid credentials
+            //- Allowing the user to login with valid credentials
             form.form-horizontal(method='post', action='/login')
                 fieldset
 
@@ -38,7 +38,7 @@ html(lang="en")
                             button.btn.btn-default(type="submit") Login
 
 
-            // Allowing the user to enter valid information and register as a buckchat member
+            //- Allowing the user to enter valid information and register as a buckchat member
             form.form-horizontal(method='post', action='/register')
                 fieldset
 
