Changed route name to be of consistent formatting

--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -45,7 +45,7 @@ html(lang="en")
 
             //- Displaying the user's buckets
             if (userBuckets)
-                form.form-horizontal(method='post', action='/buckchat/showDrip')
+                form.form-horizontal(method='post', action='/buckchat/show-drip')
                     legend Bucket List
 
                     p Click a bucket name to view its drips.
