--- a/buckchat/app/views/bucket.pug
+++ b/buckchat/app/views/bucket.pug
@@ -14,6 +14,11 @@ html(lang="en")
                 div.form-group
                     div.col-sm-6
                         button.btn.btn-default(type="submit") Back
+            form.form-horizontal(method='get', action='/logout')
+                div.form-group
+                    div.col-sm-6
+                    button.btn.btn-default.pull-right(type="submit") Logout
+
 
             h1 #{individualBucketName} Bucket
 
