--- a/buckchat/app/views/bucket.pug
+++ b/buckchat/app/views/bucket.pug
@@ -10,14 +10,14 @@ html(lang="en")
 
     body
         div.container
+            form.form-horizontal.pull-right(method='get', action='/logout')
+                div.form-group
+                    div.col-sm-6
+                    button.btn.btn-default(type="submit") Logout
             form.form-horizontal(method='get', action='/buckchat/home')
                 div.form-group
                     div.col-sm-6
                         button.btn.btn-default(type="submit") Back
-            form.form-horizontal(method='get', action='/logout')
-                div.form-group
-                    div.col-sm-6
-                    button.btn.btn-default.pull-right(type="submit") Logout
 
 
             h1 #{individualBucketName} Bucket
