--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -5,6 +5,7 @@ html(lang="en")
 
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css")
+        link(rel="stylesheet", href="https://unpkg.com/basscss@8.0.2/css/basscss.min.css")
         script(src="http://code.jquery.com/jquery-3.1.1.min.js")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
 
@@ -27,9 +28,7 @@ html(lang="en")
             form.form-horizontal(method='post', action='/buckchat/create-drip')
                 fieldset
 
-                    legend Create a Drip
-
-                    p Share what's on your mind. Use the hashtag (#) to specify one or more buckets for your drip. Example:
+                    p Create a drip to share what's on your mind. Use the hashtag (#) to specify one or more buckets for your drip. Example:
 
                     blockquote I love the Smokey Mountains! #hiking
 
@@ -49,7 +48,7 @@ html(lang="en")
                     p
                         label
                             input(type="checkbox", name="anonymous")
-                            | &nbsp;&nbsp;Make anonymous
+                            | &nbsp;&nbsp;Make anonymous #[span.italic.regular (check to ensure no one else can see you posted this drip)]
 
                     div.form-group
                         div.col-sm-6
