Revised user directions

--- a/buckchat/app/views/home.pug
+++ b/buckchat/app/views/home.pug
@@ -48,7 +48,7 @@ html(lang="en")
                     p
                         label
                             input(type="checkbox", name="anonymous")
-                            | &nbsp;&nbsp;Make anonymous #[span.italic.regular (check to ensure no one else can see you posted this drip)]
+                            | &nbsp;&nbsp;Make anonymous #[span.italic.regular (check to hide yourself from being seen as the author)]
 
                     div.form-group
                         div.col-sm-6
